name:                raf
version:             0.0.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexander Foremny
maintainer:          alexanderforemny@gmail.com
-- copyright:           
category:            Codec
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.RAF
  hs-source-dirs:      src
  build-depends:       attoparsec == 0.10.*,
                       base       == 4.5.*,
                       bytestring == 0.9.*,
                       cpu        == 0.1.*
  ghc-options:         -Wall

