name:                raf
version:             0.0.0.0
synopsis:            A Library dealing with the Riot Archive File (RAF) format.
description:         A low level library dealing with the Riot Archive File
                     (RAF) format. This is a file format heavily featured in
                     the video game League of Legends. If you are looking for a
                     library to decode RAF images this is not the library for
                     you.
                     
                     As of now the library supports parsing of RAF files into a
                     basic data type independent of the endianness of the host
                     machine. The endianness of the file is fixed by the file
                     format description.

                     Generation of RAF files is not supported although this
                     feature will most likely be added eventually.
license:             BSD3
license-file:        LICENSE
author:              Alexander Foremny
maintainer:          alexanderforemny@gmail.com
-- copyright:           
category:            Codec
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.RAF,
                       Data.RAF.Abstract,
                       Data.RAF.Combined,
                       Data.RAF.LowLevel
  hs-source-dirs:      src
  build-depends:       attoparsec        == 0.10.*,
                       attoparsec-binary == 0.1.*,
                       base              == 4.6.*,
                       bytestring        == 0.10.*,
                       containers        == 0.5.*,
                       cpu               == 0.1.*
  ghc-options:         -Wall -fno-warn-name-shadowing

